# bandmanager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yml  pull_request.yml  release.yml
docs/: api.md  getting_started.md  index.md  license.md
src/bandmanager/: __init__.py  __main__.py  client.py  constants.py  gig.py  io.py  item.py  show.py  tech.py  ui.py
src/bandmanager/documents/: __init__.py  document.py  implementations.py
src/bandmanager/templates/: Contract.odt  Factuur.ods  Offerte.ods
tests/: __init__.py  test_example.py
