[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=43.0.0", "wheel"]

[project]
authors = [
  {email = "martin@vanderschelling.com", name = "Martin van der Schelling"}
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "relatorio>=0.11.1"
]
description = "Application to create invoices, quotations and contracts for bands."
license = {text = "BSD-3-Clause"}
maintainers = [
  {email = "martin@vanderschelling.com", name = "Martin van der Schelling"}
]
name = "bandmanager"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.2.0"

[project.optional-dependencies]
dev = [
  "setuptools>=43.0.0",
  "build",
  "wheel",
  "pre-commit>=4.4.0"
]
docs = [
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-include-exclude-files>=0.1.0",
  "mkdocs-ipynb>=0.1.1",
  "mkdocs-material>=9.6.20",
  "mkdocstrings>=0.30.1",
  "mkdocstrings-python>=1.18.2",
  "pymdown-extensions>=10.16.1"
]
tests = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1"
]

[project.scripts]
dkb_manager = "bandmanager.__main__:main"

[project.urls]
bugs = "https://github.com/mpvanderschelling/bandmanager/issues"
homepage = "https://github.com/mpvanderschelling/bandmanager"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
exclude = [
  "__pycache__",
  "dist",
  "*.egg",
  "tests",
  ".git"
]
ignore = [
  "E226",
  "E3",
  "E731",
  "C901",
  "UP045",
  "B027",
  "B012"
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # Pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "UP" # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
package = true
